--- a/css/custom.css
+++ b/css/custom.css
@@ -2,10 +2,11 @@
   text-align: center;
   font-family: Georgia;
 }
-.branding .powered-by {
-  margin-top: 10px;
-  display: block;
-  font-size: 14px;
+.powered-by {
+  margin-top: 200px;
+  text-align: center;
+  font-size: 12px;
+  color: #777;
 }
 
 body {
